2008-11-11  Cameron Zwarich  <zwarich@apple.com>

        Rubber-stamped by Sam Weinig.

        Make asInteger() a static function so that it has internal linkage.

        * VM/CTI.cpp:
        (JSC::asInteger):

2008-11-11  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Mark Rowe.
        
        - shrink CodeBlock and AST related Vectors to exact fit (5-10M savings on membuster test)
        
        No perf regression combined with the last patch (each seems like a small regression individually)

        * bytecompiler/CodeGenerator.cpp:
        (JSC::CodeGenerator::generate):
        * parser/Nodes.h:
        (JSC::SourceElements::releaseContentsIntoVector):
        * wtf/Vector.h:
        (WTF::Vector::shrinkToFit):

2008-11-11  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Mark Rowe.
        
        - remove inline capacity from declaration stacks (15M savings on membuster test)

        No perf regression on SunSpider or V8 test combined with other upcoming memory improvement patch.
        
        * JavaScriptCore.exp:
        * parser/Nodes.h:

2008-11-11  Cameron Zwarich  <zwarich@apple.com>

        Reviewed by Oliver Hunt.

        While r38286 removed the need for the m_callFrame member variable of
        CTI, it should be also be removed.

        * VM/CTI.h:

2008-11-10  Cameron Zwarich  <zwarich@apple.com>

        Reviewed by Oliver Hunt.

        Make CTI::asInteger() a non-member function, since it needs no access to
        any of CTI's member variables.

        * VM/CTI.cpp:
        (JSC::asInteger):
        * VM/CTI.h:

2008-11-10  Cameron Zwarich  <zwarich@apple.com>

        Reviewed by Maciej Stachowiak.

        Use 'value' instead of 'js' in CTI as a name for JSValue* to match our
        usual convention elsewhere.

        * VM/CTI.cpp:
        (JSC::CTI::emitGetArg):
        (JSC::CTI::emitGetPutArg):
        (JSC::CTI::getConstantImmediateNumericArg):
        (JSC::CTI::printOpcodeOperandTypes):
