@@ -213,30 +213,30 @@ namespace JSC {
             String
         };
 
-        Type m_type;
+        Type type;
 
         union {
-            SimpleJumpTable* m_simpleJumpTable;
-            StringJumpTable* m_stringJumpTable;
-        } m_jumpTable;
+            SimpleJumpTable* simpleJumpTable;
+            StringJumpTable* stringJumpTable;
+        } jumpTable;
 
-        unsigned m_opcodeIndex;
-        unsigned m_defaultOffset;
+        unsigned opcodeIndex;
+        unsigned defaultOffset;
 
         SwitchRecord(SimpleJumpTable* jumpTable, unsigned opcodeIndex, unsigned defaultOffset, Type type)
-            : m_type(type)
-            , m_opcodeIndex(opcodeIndex)
-            , m_defaultOffset(defaultOffset)
+            : type(type)
+            , opcodeIndex(opcodeIndex)
+            , defaultOffset(defaultOffset)
         {
-            m_jumpTable.m_simpleJumpTable = jumpTable;
+            this->jumpTable.simpleJumpTable = jumpTable;
         }
 
         SwitchRecord(StringJumpTable* jumpTable, unsigned opcodeIndex, unsigned defaultOffset)
-            : m_type(String)
-            , m_opcodeIndex(opcodeIndex)
-            , m_defaultOffset(defaultOffset)
+            : type(String)
+            , opcodeIndex(opcodeIndex)
+            , defaultOffset(defaultOffset)
         {
-            m_jumpTable.m_stringJumpTable = jumpTable;
+            this->jumpTable.stringJumpTable = jumpTable;
         }
     };
 
